src/objects/Linked_Form__c.object
<CustomObject>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Linked Forms</relationshipLabel>
        <relationshipName>Linked_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grouping_Name__c</fullName>
        <label>Grouping Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Vendor product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Linked Forms</relationshipLabel>
        <relationshipName>Linked_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Linked_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Linked Form</label>
    <nameField>
        <displayFormat>LFRM-{00000000}</displayFormat>
        <label>Linked Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>